--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 @media (max-width: 700px) {
   .img_place {
-    margin-left: -4rem;
+    margin-left: -5rem;
   }
 }
 
@@ -25,13 +25,12 @@
 }
 
 .p_top_buttom_margin {
-  margin-top: 0.6rem;
-  margin-bottom: 2.5rem;
+  margin-block: 0.6rem 2.5rem;
 }
 
 .grid_2col_ommig {
   display: grid;
-  grid-template-columns: 3.5fr 1fr;
+  grid-template-columns: 3fr 1fr;
   column-gap: 50px;
 }
 
@@ -39,58 +38,64 @@
   border-right: 1px solid black;
 }
 
-.erhvervserfaring_left {
-  text-align: end;
-}
-
 .sort_h2 {
   color: black;
   margin-bottom: 0rem;
 }
 
+.tekst_ommig {
+  max-width: 65ch;
+}
+
 /*---------------MOBILEFIRST SLUUUUT---------------*/
 
 /*---------------DESKTOP---------------*/
-/*
-@media (min-width: 700px) {
+
+/*første sektion med billede og lille tekst, citat osv*/
+
+@media (min-width: 800px) {
   .grid_2col_sec1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    margin-top: 3rem;
   }
+
   .img_place1 {
-    grid-column: 1;
-    grid-row: 1;
-    width: 50%;
-    margin-left: 7rem;
-    margin-top: 4rem;
-  }
-  .tekst1_ommig {
-    grid-column: 2;
-    grid-row: 1;
-  }
-  .tekst2_ommig {
-    grid-column: 2;
-    grid-row: 1;
-    margin-top: 16rem;
+    order: -1;
+    place-content: left;
   }
 }
-*/
 
-/*nederste sektioner med uddannelse, erhverv og kontakt*/
-@media (min-width: 700px) {
-  .grid_col2_ommig_desk {
+@media (min-width: 1200px) {
+  .grid_2col_sec1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-inline: 12rem;
+    gap: 40px;
+  }
+
+  .img_place1 {
+    order: -1;
+    place-content: left;
+  }
+}
+
+/*nederste sektioner med uddannelse, erhverv og kontakt*/
+@media (min-width: 800px) {
+  .grid_col2_ommig_desk {
+    display: grid;
+    grid-template-columns: auto auto;
     margin-top: 2rem;
-    margin-inline: 5rem;
     gap: 20px;
   }
   .uddannelse_desktop {
     font-size: 4rem;
+    text-align: center;
   }
 
   .grid_2col_ommig {
-    margin-top: 3.5rem;
+    margin-top: 2rem;
     font-size: 1.2rem;
   }
 }
