--- a/css/generel.css
+++ b/css/generel.css
@@ -28,12 +28,14 @@ h3 {
 p {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  line-height: 1.4rem;
+  font-size: 1.1rem;
+  line-height: 1.6rem;
   max-width: 60ch;
   margin-bottom: var(--space-xs);
 }
 
-img {
+img,
+video {
   max-width: 100%;
 }
 
