--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ a {
   }
   .calltoaction_center {
     text-align: center;
-    margin-top: 7rem;
+    margin-top: 8rem;
   }
   .img_opgavebeskrivelse {
     padding-top: 2rem;
@@ -317,4 +317,17 @@ a {
   .proces_byt_plads {
     order: -1;
   }
+  .calltoaction_knap2_tema05 {
+    padding-top: 13rem;
+  }
 }
+
+@media (max-width: 1100px) {
+  .calltoaction_knap2_tema05 {
+    padding-top: 2rem;
+  }
+}
+
+/* .video {
+  max-width: 100%;
+} 
