--- a/css/generel.css
+++ b/css/generel.css
@@ -1,13 +1,15 @@
-/*GENERELLE REGLER FOR TEKST + VARIABLER*/
+/*NULSTIL DEFAULT INDSTILLINGER*/
 * {
   margin: 0%;
   box-sizing: border-box;
 }
 
+/*REGLER FOR H1 (bruges til overskrifter), H2 (bruges til underoverskrifter, 
+H3 (bruges til den lille tekst under det store tal på temasiden) og p (brødtekst)*/
+
 h1 {
   font-family: "Playfair Display SC", serif;
-  color: black;
-  font-size: clamp(4rem, 10vw - 1.5rem, 5.6rem);
+  font-size: clamp(4rem, 6vw + 1rem, 5.5rem);
 }
 
 h2 {
@@ -15,12 +17,18 @@ h2 {
   color: var(--primary-color);
   font-weight: 500;
   margin-bottom: var(--space-xxs);
-  font-size: 3rem;
+  font-size: clamp(2rem, 5.3vw - 1rem, 3rem);
+}
+/*I mobilversion skærm skal der være en smule afstand mellem hvert afsnit)*/
+@media (max-width: 800px) {
+  h2 {
+    margin-top: var(--space-l);
+  }
 }
 
 h3 {
   font-family: "Playfair Display SC", serif;
-  font-size: 1.6rem;
+  font-size: var(--space-ml);
 
   margin-top: -1.6rem;
 }
@@ -41,7 +49,7 @@ video {
 
 /*FOOTER*/
 footer {
-  margin-top: 3rem;
+  margin-top: var(--space-l);
   text-align: center;
   color: gray;
 }
@@ -53,53 +61,30 @@ html {
   --space-xs: 0.8rem;
   --space-sm: 1rem;
   --space-md: 1.5rem;
+  --space-ml: 1.6rem;
   --space-l: 2rem;
   --space-xl: 3rem;
-  --space-xxl: 4.5rem;
+  --space-xxl: 4rem;
 }
 
 body {
   background-color: #dbd5c9;
-  margin: 2rem;
+  margin: var(--space-l);
 }
-
-/*NAVIGARTION*/
-/* header {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-between;
-  align-items: center;
-  /* position: fixed; */
-/* width: 100%;
-  top: 0;
-  left: 0;
-}
-
-nav a {
-  text-decoration: none;
-  color: black;
-  font-family: "Roboto", sans-serif;
-}
-
-nav li {
-  list-style: none;
-  display: inline-block;
-}
-
-.logo {
-  color: black;
-  text-decoration: none;
-  list-style: none;
-  font-size: 3rem;
-} */
-/* */
 
 /* header */
+
 .banner {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   flex-flow: wrap;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  background-color: #dbd5c9;
+  padding: 0.5rem 0rem 1rem 0rem;
 }
 
 .main-menu {
@@ -111,7 +96,6 @@ nav li {
   padding: 0;
   display: flex;
   gap: 20px;
-  transition: background-color 0.5s ease;
 }
 
 .banner a {
@@ -125,7 +109,7 @@ nav li {
 
 .logo {
   font-family: "Playfair Display SC", serif;
-  font-size: 2rem;
+  font-size: var(--space-l);
 }
 
 /* burgermenu */
@@ -134,7 +118,7 @@ nav li {
   border: none;
   min-width: 44px;
   min-height: 44px;
-  font-size: 1rem;
+  font-size: var(--space-sm);
   cursor: pointer;
 
   display: none; /* Skjul knappen som standard */
@@ -156,10 +140,25 @@ nav li {
   .main-menu.shown ul {
     /* Vis menu-listen, når klassen ".shown" er til stede */
     border-top: 1px solid #000;
-    padding-top: 1rem;
+    padding-top: var(--space-sm);
     display: flex;
     flex: 1 1 100%;
     flex-flow: column;
     text-align: end;
   }
+}
+
+.bladre_sider {
+  text-align: end;
+  margin-top: var(--space-xl);
+}
+
+.next_page {
+  color: black;
+  text-align: end;
+  font-family: "Roboto", sans-serif;
+}
+
+.next_page:hover {
+  border-bottom: 2px solid var(--primary-color);
 }
