--- a/css/generel.css
+++ b/css/generel.css
@@ -104,7 +104,7 @@ body {
 }
 
 .main-menu a:hover {
-  border-bottom: 2px solid orange;
+  border-bottom: 2px solid var(--primary-color);
 }
 
 .logo {
