--- a/css/generel.css
+++ b/css/generel.css
@@ -56,7 +56,7 @@ footer {
 
 /*COSTUM VARIABLER*/
 html {
-  --primary-color: #ff7029;
+  --primary-color: #fd6a21;
   --space-xxs: 0.25rem;
   --space-xs: 0.8rem;
   --space-sm: 1rem;
